2008-10-16  Alex Schroeder  <aschroeder@localhost>

	* modules/logbannedcontent.pl (LogBannedContent): Don't remap
	BannedContent again.
	Copy the $BannedContent variable.

2008-10-12  Alex Schroeder  <alex@gnu.org>

	* t/test.pl (xpath_do): Strip XML preprocessing instruction and
	call the XML parser if the HTML parser fails. Now we can write
	XPath tests on XML documents.

2008-10-12  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/hibernal.pl (HibernalInit): Implemented context-
	dependent defaults for $HibernalPostCommentsAuthorshipMarkup.
	(AssayHibernalPostBounds): Corrected several obscure, but
	damaging, edge-cases. (This necessitated a rewrite of the
	algorithm, unfortunately.)

2008-10-07  Alex Schroeder  <alex@gnu.org>

	* modules/creole.pl (CreoleRule): Fix dirty block handling for the
	[[page]] and [[page|text]] rules.

2008-10-07  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/creole.pl (CreoleRule): Allow one newline character
	following an explicit pipe character to end a table.

2008-10-06  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* wiki.pl (ApplyRules): Ensure the regular expression match
	position returns the length of the matched string on finishing
	application of all rules. ("creole.pl" and "creoleaddition.pl" now
	depend on this; it notifies them that rules are now finished.)
	* modules/creoleaddition.pl (CreoleAdditionRule): Injected a sanity
	check, to ensure closure of blockquotes at the end of a page.
	* modules/creole.pl ($CreoleTableCellsAllowBlockLevelElements): New
	option.
	* modules/creole.pl (CreoleRule): The last, one hopes, of all Creole
	table markup modifications (for the moment). The rather complex
	table markup code has been modified so as to use the new option, has
	been refactored for robustness and strict conformance to the Wiki
	Creole standard, and has been well-documented.
	* modules/creole.pl (CreoleGetTableHtmlAttributes): Deleted function.
	