@@ -1,3 +1,10 @@
+2008-10-19  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/poetry.pl (PoetryInit): New function.
+	(PoetryRule): Generalized markup handling so as to avoid
+	conflict with HTML "div" tags produced by other markup
+	extensions.
+
 2008-10-16  Alex Schroeder  <aschroeder@localhost>
 
 	* modules/logbannedcontent.pl (LogBannedContent): Don't remap
